# urc-drone

./: .gitignore  .gitmodules  README.md  run_px4_instructions.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: ci.yml
documents/: run_px4_instructions.md  ubuntu_px4_setup.md  wsl_px4_setup_prereq.md
install/: local_setup.sh  setup.sh
log/: latest_build
urc_aruco/: CMakeLists.txt  README.md  package.xml
urc_aruco/config/: aruco_backup_params.yaml  aruco_detector_params.yaml  aruco_location_params.yaml  aruco_params.yaml
urc_aruco/include/: aruco_backup.hpp  aruco_detector.hpp  aruco_location.hpp
urc_aruco/launch/: aruco_backup.launch.py  aruco_detector.launch.py
urc_aruco/src/: aruco_backup.cpp  aruco_detector.cpp  aruco_location.cpp
urc_gate/include/: gate_behavior.hpp
urc_gate/launch/: single_gate.launch.py
urc_gate/src/: gate_behavior.cpp
urc_gazebo/: CMakeLists.txt
urc_gazebo/launch/: simulation.launch.py  spawn_drone.py
urc_gazebo/urdf/: drone.gazebo  drone.xacro  drone_inertials.xacro
urc_landing/: CMakeLists.txt  README.md  package.xml
urc_landing/include/: landing_location.hpp
urc_landing/launch/: landing_location.launch.py
urc_landing/src/: landing_location.cpp
urc_msgs/: CMakeLists.txt  README.md
urc_msgs/msg/: ArucoDetection.msg  ArucoLocation.msg  GPSLocations.msg  GateDecision.msg  LandLocation.msg  LandingLocation.msg  PossibleLandingLocations.msg
urc_teleop/: CMakeLists.txt  README.md  package.xml
urc_teleop/src/: offboard_control.cpp
(+69 files in other folders)
